--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "css-loader": "^0.28.7",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
-    "vue-style-loader": "^3.0.3"
+    "vue-style-loader": "^3.0.3",
+    "vuex": "^3.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
